outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_01-06-18/evaluations/problem_eval2842034006216923859_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as progress advances, using a selection pressure that transitions from 0.6 to 0.9.}
                                                                                                 ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as progress advances, using a selection pressure that transitions from 0.6 to 0.9.}
                                                                                                 ^
SyntaxError: unmatched '}'
